--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
               value="0"
               id="openbtn"
             >
-              ☰
+              <i class="fa-solid fa-bars"></i>
             </button>
             <!-- ENLACES SIDEBAR -->
             <li>
@@ -131,22 +131,27 @@
             </li>
             <li>
               <a href="#">
-                <span class="icon">
+                <span
+                  class="icon modal-btn"
+                  onclick="openModal()"
+                  data-open="modal-id01"
+                >
                   <!-- <img src="img/img-users/user-w.svg" alt="Foto Usuario"
                   /> -->
                   <i class="fa-solid fa-circle-user"></i>
                 </span>
-                <span
-                  class="title"
-                  onclick="document.getElementById('modal-id01').style.display='block'"
-                  data-open="modal-id01"
+                <span class="title" onclick="openModal()" data-open="modal-id01"
                   >Usuario</span
                 >
               </a>
             </li>
             <li>
               <a href="#">
-                <span class="icon">
+                <span
+                  class="icon modal-btn"
+                  onclick="openModal()"
+                  data-open="modal-id01"
+                >
                   <!-- <img
                     src="img/svg/fa/right-to-bracket-solid-w.svg"
                     alt="id-card icon"
@@ -155,10 +160,7 @@
                   /> -->
                   <i class="fa-solid fa-right-to-bracket"></i>
                 </span>
-                <span
-                  class="title"
-                  onclick="document.getElementById('modal-id01').style.display='block'"
-                  data-open="modal-id01"
+                <span class="title" onclick="openModal()" data-open="modal-id01"
                   >Iniciar Sesión</span
                 >
                 <!-- <button type="button" class="open-modal" data-open="modal-id01">boton</button> -->
@@ -319,9 +321,7 @@
                 />
                 <span>$450.000,00 COP/noche</span>
                 <!-- Boton Reservar -->
-                <button class="btn-share" style="font-size: 0.75rem">
-                  Compartir <i class="fas fa-share-square"></i>
-                </button>
+
                 <input
                   class="btn-booking"
                   type="submit"
@@ -333,6 +333,8 @@
               <span> </span>
             </div>
           </div>
+
+          <!-- CONTENIDO DESCRIPCIÓN -->
           <div class="information">
             <h3>Descripción</h3>
             <div class="text">
@@ -396,29 +398,15 @@
                   El hotel está cerca del centro comercial Dubai Mall y a 15
                   minutos en coche del aeropuerto internacional de Dubái.
                 </p>
+                <br />
+                <button class="btn-share">
+                  Compartir <i class="fas fa-share-square"></i>
+                </button>
               </div>
             </div>
           </div>
         </main>
         <footer id="footer">
-          <div class="social-media">
-            <span>
-              <a href="#"><i class="icon fab fa-2x fa-facebook-square"></i></a>
-            </span>
-            <span>
-              <a href="#"><i class="icon fab fa-2x fa-youtube"></i></a>
-            </span>
-            <span>
-              <a href="#"><i class="icon fab fa-2x fa-twitter"></i></a>
-            </span>
-            <span>
-              <a href="#"><i class="icon fab fa-2x fa-pinterest"></i></a>
-            </span>
-            <span>
-              <a href="#"><i class="icon fab fa-2x fa-instagram"></i></a>
-            </span>
-          </div>
-
           <div id="nav-footer">
             <ul id="nav-footer-1" class="nav-footer">
               <li><a href="#">Historia</a></li>
@@ -450,7 +438,7 @@
               </li>
             </ul>
           </div>
-
+          <!-- LOGOS ROTANA RYHAAN FOOTER -->
           <div class="logo-footer">
             <a href="index.html">
               <img
@@ -468,8 +456,31 @@
             </a>
           </div>
 
-          <div>
-            <h5>&copy; Copyright 2022 Fake Rotana Hotels Corporation</h5>
+          <div class="footer-bottom">
+            <div>
+              <h5>&copy; Copyright 2022 Fake Rotana Hotels Corporation</h5>
+            </div>
+            <div>
+              <div class="social-media">
+                <span>
+                  <a href="#"
+                    ><i class="icon fab fa-lg fa-facebook-square"></i
+                  ></a>
+                </span>
+                <span>
+                  <a href="#"><i class="icon fab fa-lg fa-youtube"></i></a>
+                </span>
+                <span>
+                  <a href="#"><i class="icon fab fa-lg fa-twitter"></i></a>
+                </span>
+                <span>
+                  <a href="#"><i class="icon fab fa-lg fa-pinterest"></i></a>
+                </span>
+                <span>
+                  <a href="#"><i class="icon fab fa-lg fa-instagram"></i></a>
+                </span>
+              </div>
+            </div>
           </div>
         </footer>
       </div>
@@ -477,5 +488,6 @@
     <!-- <script src="js/slideshow.js"></script> -->
     <script src="js/sidebar.js"></script>
     <script src="js/slideshow.js"></script>
+    <script src="js/modal.js"></script>
   </body>
 </html>
